# pack-opening-detection

./: .gitignore  CLAUDE.md  README.md  implementation-plan.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
src/pack_config_miner/: __init__.py  assets.py  cli.py
src/pack_config_miner/contracts/: __init__.py  catalog.py  manifest.py  observation.py  pack_config.py  template.py
src/pack_config_miner/pipeline/: __init__.py  aggregate.py  attribute.py  confidence.py  frames.py  group.py  index.py  ingest.py  resolve.py  review.py  run.py
src/pack_config_miner/pipeline/identify/: __init__.py  base.py  hybrid.py  local_cv.py  vision_llm.py
templates/: JRV.json
tests/: test_aggregate.py  test_assets.py  test_attribute.py  test_confidence.py  test_contracts.py  test_frames.py  test_group.py  test_hybrid.py  test_identify.py  test_ingest.py  test_local_cv.py  test_pipeline_golden.py  test_resolve.py  test_review.py  test_smoke.py
tests/fixtures/: cards_sample.json  image_cache_sample.json  vision_response_sample.json
tests/fixtures/golden/: catalog.json  config.json  template.json
