[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pack-config-miner"
version = "0.0.1"
description = "Mine trading-card pack-opening footage into probabilistic per-set pack configurations."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD" }
authors = [{ name = "daha", email = "ahammer.dominik@gmail.com" }]
keywords = ["trading-cards", "vision", "ocr", "pipeline", "pack-opening"]

# Core deps — enough for contracts, indexing, resolve, attribute, aggregate, CLI.
# Heavy/optional concerns (vision API, video, local CV) live in extras below so M0
# tests don't need ffmpeg/yt-dlp/torch installed.
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
# Tier 1 — vision-LLM identification (Anthropic Claude vision).
vision = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]
# Ingest + frame sampling.
media = [
    "yt-dlp>=2024.0",
    "av>=12.0",
    "numpy>=1.26",
    "pillow>=10.0",
]
# Tier 2 — local CV fallback (detector + embedding match + vector index).
cv = [
    "opencv-python>=4.9",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
]
# Everything, for a full local environment.
all = [
    "pack-config-miner[vision,media,cv]",
]
# Development tooling.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
pack-miner = "pack_config_miner.cli:app"

[project.urls]
Homepage = "https://github.com/daha/pack-opening-detection"

[tool.hatch.build.targets.wheel]
packages = ["src/pack_config_miner"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
packages = ["pack_config_miner"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# Strict on the contracts — they are the API.
[[tool.mypy.overrides]]
module = "pack_config_miner.contracts.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true

# Optional heavy deps (media/cv/vision extras) ship without type stubs.
[[tool.mypy.overrides]]
module = ["yt_dlp.*", "numpy.*", "av.*", "PIL.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["pack_config_miner"]
branch = true
